roles/ocp4_workload_ocp_troubleshooting_workshop/files/workloads/06-lifecycle/6.3-wrong-image-tag/broken/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-6-3-app
  labels:
    app: lab-6-3-app
    demo.redhat.com/name: ocp-troubleshooting-workshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lab-6-3-app
  template:
    metadata:
      labels:
        app: lab-6-3-app
    spec:
      containers:
      - name: web
        image: registry.access.redhat.com/ubi8/httpd-24:v99.99
        ports:
        - containerPort: 8080
